# walrs

./: Cargo.toml  LICENSE  Makefile  README.md  autocomplete.sh  flake.nix  walrs.1
scripts/NOTE/: README
src/: completions.rs  create_templates.rs  get_colors.rs  main.rs  reload.rs  theme.rs  utils.rs  wallpaper.rs
templates/: colors-hyprland.conf
