[package]
name = "walrs"
version = "1.0.5"
edition = "2024"
description = "walrs is a fast color scheme generator."
license = "GPL" 
repository = "https://github.com/pixel2175/walrs"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
color-thief = "0.2.2"
dirs-next = "2.0.0"
image = "0.25.6"
palette_extract = "0.1.0"
