[package]
name = "walrs"
version = "1.1.1"
edition = "2024"
description = "walrs - Generate colorscheme from image."
license = "GPL" 
repository = "https://github.com/pixel2175/walrs"

[dependencies]
argh = "0.1.13"
color-thief = "0.2.2"
image = "0.25.6"
kmeans_colors = "0.7.0"
palette = "0.7.6"
palette_extract = "0.1.0"
